Telemetry clarification and ALL-SYSTEM